--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>كل سنة وأنتِ طيبة</title>
+    <title>Giga Man</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
         
